--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^5.3.8",
-    "csv-reader": "^1.0.11"
+    "csv-parse": "^5.3.8"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
